--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,13 +3,9 @@ spring.datasource.url=jdbc:mysql://localhost:3306/booking_boss_test?useSSL=false
 spring.datasource.username=root
 spring.datasource.password=root
 
-# Hibernate
-
-# The SQL dialect makes Hibernate generate better SQL for the chosen database
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+# Hibernate Dialect
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 
-# Hibernate ddl auto (create, create-drop, validate, update)
 spring.jpa.hibernate.ddl-auto = update
 
 logging.level.org.hibernate.SQL=DEBUG
@@ -21,5 +17,4 @@ hibernate.globally_quoted_identifiers=true
 spring.jpa.properties.hibernate.id.new_generator_mappings = false
 spring.jpa.properties.hibernate.format_sql = true
 
-logging.level.org.hibernate.SQL=DEBUG
 
