--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>Helix leisure Assignment test</name>
+	<name>Helix leisure Assignment test 2</name>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
